Time: 3 ms (43.7%), Space: 44.9 MB (57.04%) - LeetHub